# onmetal-ironic-hardware-manager

./: .testr.conf  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
onmetal_ironic_hardware_manager/: __init__.py
onmetal_ironic_hardware_manager/tests/: manager.py
onmetal_ironic_hardware_manager/tests/data/: ddoemcli_format_out.txt  ddoemcli_health_out.txt  ddoemcli_healthall_out.txt  ddoemcli_listall_out.txt  smartctl_attributes_out.txt
