[metadata]
name = ironic-python-agent
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = OnMetal Hardware Manager Implementation
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    onmetal_ironic_hardware_manager

[entry_points]
ironic_python_agent.hardware_managers =
    onmetal = onmetal_ironic_hardware_manager:OnMetalHardwareManager
